# vibe-coding-ide

./: .gitignore  README.md  README.vi.md  package-lock.json  package.json  vite.config.ts
docs/: README.md  code-standards.md  design-guidelines.md  project-overview.md  system-architecture.md  tech-stack.md
docs/wireframes/: git-view.html  terminal-view.html
plans/260315-1451-devtools-terminal-git-ui/: phase-01-scaffold.md  phase-02-terminal.md  phase-03-split-panes.md  phase-04-session-persistence.md  phase-05-git-ui.md  phase-06-app-shell.md  phase-07-keyboard-shortcuts.md  phase-08-build-package.md  plan.md
plans/260315-1608-refactor-ui-project-tabs/: phase-01-refactor-stores.md  phase-02-tab-bar.md  phase-03-app-layout.md  phase-04-cleanup.md  plan.md
plans/260315-1616-web-devtools-gap-analysis/: plan.md
plans/260315-1652-vietnamese-ime-terminal-fix/: phase-01-xterm-ime-config.md  phase-02-testing.md  plan.md
plans/260315-1656-monaco-editor-file-explorer/: phase-01-setup-and-store.md  phase-02-file-explorer.md  phase-03-monaco-editor.md  phase-04-integration.md  plan.md
plans/260315-1747-embedded-browser/: plan.md  (+6 more)
scripts/: setup-msvc-env.sh
src/: app.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-webview.json
src-tauri/src/: agent_audit.rs  agent_config.rs  agent_protocol.rs  agent_server.rs  browser_ops.rs  claude_manager.rs  clipboard_helper.rs  file_ops.rs  git_ops.rs  ime_handler.rs  lib.rs  main.rs  pty_manager.rs  session_store.rs  sftp_ops.rs  ssh_manager.rs  ssh_presets.rs
(+169 files in other folders)
